--- a/.github/workflows/workflow-1.yaml
+++ b/.github/workflows/workflow-1.yaml
@@ -25,5 +25,6 @@ jobs:
   Second-job:
     name: Running second job now
     runs-on: windows-latest
+    needs: Example-job
     steps:
       - run: echo "This job is running on ${{ runner.os }}"
